bindings/binding_typescript_wasm/__tests__/__snapshots__/transform.js.snap
// Rstest Snapshot v1

exports[`transform > in strip-only mode > should not emit 'Caused by: failed to parse' 1`] = `
{
  "code": "InvalidSyntax",
  "endColumn": 22,
  "endLine": 1,
  "filename": "test.ts",
  "message": "await isn't allowed in non-async function",
  "snippet": "function foo() { await Promise.resolve(1); }
                 ^^^^^
",
  "startColumn": 17,
  "startLine": 1,
}
`;

exports[`transform > in strip-only mode > should remove declare enum 1`] = `
{
  "code": "                   ",
  "map": undefined,
}
`;

exports[`transform > in strip-only mode > should remove declare enum 2`] = `
{
  "code": "                  
                     
                 ",
  "map": undefined,
}
`;

exports[`transform > in strip-only mode > should remove declare enum 3`] = `
{
  "code": "                  
                          
                      
                     ",
  "map": undefined,
}
`;

exports[`transform > in strip-only mode > should report correct error for syntax error 1`] = `
{
  "code": "InvalidSyntax",
  "endColumn": 31,
  "endLine": 1,
  "filename": "test.ts",
  "message": "Expected ';', '}' or <eof>",
  "snippet": "function foo() { invalid syntax }
                         ^^^^^^
",
  "startColumn": 25,
  "startLine": 1,
}
`;

exports[`transform > in strip-only mode > should report correct error for unsupported syntax 1`] = `
{
  "code": "UnsupportedSyntax",
  "endColumn": 21,
  "endLine": 3,
  "filename": "test.ts",
  "message": "TypeScript enum is not supported in strip-only mode",
  "snippet": "  > enum Foo {
                        a, b    
  >                     }
",
  "startColumn": 0,
  "startLine": 1,
}
`;

exports[`transform > in strip-only mode > should strip complex expressions 1`] = `
{
  "code": "const foo = {
                        foo: 1          ,
                        bar: "bar"                 ,
                    }                 ;
                    const bar = "bar";",
  "map": undefined,
}
`;

exports[`transform > in strip-only mode > should strip nonnull assertions 1`] = `
{
  "code": "const foo = 1 ;
                    const bar = "bar";",
  "map": undefined,
}
`;

exports[`transform > in strip-only mode > should strip satisfies 1`] = `
{
  "code": "const foo = 1                 ;
                    const bar = "bar";",
  "map": undefined,
}
`;

exports[`transform > in strip-only mode > should strip type annotations 1`] = `
{
  "code": "const foo = 1;
                    const bar      = "bar";",
  "map": undefined,
}
`;

exports[`transform > in strip-only mode > should strip type assertions 1`] = `
{
  "code": "const foo = 1          ;
                    const bar = "bar";",
  "map": undefined,
}
`;

exports[`transform > in strip-only mode > should strip type declarations 1`] = `
{
  "code": "const foo = 1;
                                      
                                      
                    const bar      = "bar";",
  "map": undefined,
}
`;

exports[`transform > in strip-only mode > should throw an error when it encounters a module 1`] = `
{
  "code": "UnsupportedSyntax",
  "endColumn": 10,
  "endLine": 1,
  "filename": "test.ts",
  "message": "\`module\` keyword is not supported. Use \`namespace\` instead.",
  "snippet": "module foo { }
^^^^^^^^^^
",
  "startColumn": 0,
  "startLine": 1,
}
`;

exports[`transform > in strip-only mode > should throw an error when it encounters a module 2`] = `
{
  "code": "UnsupportedSyntax",
  "endColumn": 18,
  "endLine": 1,
  "filename": "test.ts",
  "message": "\`module\` keyword is not supported. Use \`namespace\` instead.",
  "snippet": "declare module foo { }
        ^^^^^^^^^^
",
  "startColumn": 8,
  "startLine": 1,
}
`;

exports[`transform > in strip-only mode > should throw an error when it encounters a namespace 1`] = `
{
  "code": "UnsupportedSyntax",
  "endColumn": 37,
  "endLine": 1,
  "filename": "test.ts",
  "message": "TypeScript namespace declaration is not supported in strip-only mode",
  "snippet": "namespace Foo { export const m = 1; }
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
",
  "startColumn": 0,
  "startLine": 1,
}
`;

exports[`transform > in strip-only mode > should throw an error when it encounters an enum 1`] = `
{
  "code": "UnsupportedSyntax",
  "endColumn": 11,
  "endLine": 1,
  "filename": "test.ts",
  "message": "TypeScript enum is not supported in strip-only mode",
  "snippet": "enum Foo {}
^^^^^^^^^^^
",
  "startColumn": 0,
  "startLine": 1,
}
`;

exports[`transform > in transform mode > shoud throw an object even with deprecatedTsModuleAsError = true 1`] = `
{
  "code": "UnsupportedSyntax",
  "endColumn": 8,
  "endLine": 1,
  "filename": "<anon>",
  "message": "\`module\` keyword is not supported. Use \`namespace\` instead.",
  "snippet": "module F { export type x = number }
^^^^^^^^
",
  "startColumn": 0,
  "startLine": 1,
}
`;

exports[`transform > in transform mode > should throw an error when it encounters a declared module 1`] = `
{
  "code": "UnsupportedSyntax",
  "endColumn": 18,
  "endLine": 1,
  "filename": "test.ts",
  "message": "\`module\` keyword is not supported. Use \`namespace\` instead.",
  "snippet": "declare module foo { }
        ^^^^^^^^^^
",
  "startColumn": 8,
  "startLine": 1,
}
`;

exports[`transform > in transform mode > should throw an error when it encounters a module 1`] = `
{
  "code": "UnsupportedSyntax",
  "endColumn": 10,
  "endLine": 1,
  "filename": "test.ts",
  "message": "\`module\` keyword is not supported. Use \`namespace\` instead.",
  "snippet": "module foo { }
^^^^^^^^^^
",
  "startColumn": 0,
  "startLine": 1,
}
`;

exports[`transform > should strip types 1`] = `
{
  "code": "
        export const foo         = 1;
                          
    ",
  "map": undefined,
}
`;
